test/functions/resolution/errors/testBadCallCandidates.3.good
testBadCallCandidates.chpl:45: In function 'main':
testBadCallCandidates.chpl:56: error: unresolved call 'foo(42)'
testBadCallCandidates.chpl:36: note: this candidate did not match: foo(x: C)
testBadCallCandidates.chpl:56: note: because call actual argument #1 with type int(64)
testBadCallCandidates.chpl:36: note: is passed to formal 'x: C'
testBadCallCandidates.chpl:4: note: candidates are: C.foo(x: string)
testBadCallCandidates.chpl:17: note:                 D.foo(x: int)
